--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
+html, body {
+ height: 100%;
+ width: 100%;
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+}
 
+body {
+ background-image: url("https://wallpaper.dog/large/20552168.jpg");
+ background-size: cover;
+}
+
+#scene-description {
+ width: 600px;
+ margin: 20px auto;
+ text-align: center;
+ font-family: "Trebuchet MS";
+ font-size: 0.8em;
+ color: white;
+}
+
+#scene-container {
+ width: 600px;
+ height: 400px;
+ margin: auto;
+ border: 5px solid black;
+ background-color: rgb(214, 209, 209);
+ overflow: hidden; /* contain objects "on-screen" */
+}
+
+#joker {
+   width: 100px;
+   height: 280px; 
+   position:absolute;
+   top: 237px;
+   left: 250px;
+}
+
+#hospital {
+    width: 600px;
+    height: 530px;
+}
+
+#remote {
+    width: 100px;
+    height: 100px;
+}
